# verilog_template

./: .gitignore  CMakeLists.txt  LICENSE  README.md
docs/: CMakeLists.txt  counter.html  stddoc.c
rtl/: CMakeLists.txt  counter.v
sim/cpp/: CMakeLists.txt  top_tb.cpp
sim/tests/: .gitignore  CMakeLists.txt  counter.sby
sim/verilog/: CMakeLists.txt  top_tb.v
